objects/zqu__Quote__c.object
<CustomObject>
    <description>The Quotes related to an Opportunity.</description>
    <fields>
        <fullName>zqu__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account associated with this Quote.</description>
        <inlineHelpText>The Account associated with this Quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__AmendmentName__c</fullName>
        <description>A name for the amendment.</description>
        <label>Amendment Name (Deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Amendment_Name__c</fullName>
        <description>New amendment name field to accommodate Opportunity Name</description>
        <label>Amendment Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ApplyCreditBalance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag determines whether any credit balance on a customer&apos;s account is automatically applied to invoices</description>
        <inlineHelpText>The flag determines whether any credit balance on a customer&apos;s account is automatically applied to invoices</inlineHelpText>
        <label>Apply Credit Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Quote will Auto Renew or not.</description>
        <inlineHelpText>If this Quote will Auto Renew or not.</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <label>Bill Cycle Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is billed for this Quote.</description>
        <inlineHelpText>The Contact that is billed for this Quote.</inlineHelpText>
        <label>Bill to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__BillingBatch__c</fullName>
        <label>Billing Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch1</fullName>
                    <default>true</default>
                    <label>Batch1</label>
                </value>
                <value>
                    <fullName>Batch2</fullName>
                </value>
                <value>
                    <fullName>Batch3</fullName>
                </value>
                <value>
                    <fullName>Batch4</fullName>
                </value>
                <value>
                    <fullName>Batch5</fullName>
                </value>
                <value>
                    <fullName>Batch6</fullName>
                </value>
                <value>
                    <fullName>Batch7</fullName>
                </value>
                <value>
                    <fullName>Batch8</fullName>
                </value>
                <value>
                    <fullName>Batch9</fullName>
                </value>
                <value>
                    <fullName>Batch10</fullName>
                </value>
                <value>
                    <fullName>Batch11</fullName>
                </value>
                <value>
                    <fullName>Batch12</fullName>
                </value>
                <value>
                    <fullName>Batch13</fullName>
                </value>
                <value>
                    <fullName>Batch14</fullName>
                </value>
                <value>
                    <fullName>Batch15</fullName>
                </value>
                <value>
                    <fullName>Batch16</fullName>
                </value>
                <value>
                    <fullName>Batch17</fullName>
                </value>
                <value>
                    <fullName>Batch18</fullName>
                </value>
                <value>
                    <fullName>Batch19</fullName>
                </value>
                <value>
                    <fullName>Batch20</fullName>
                </value>
                <value>
                    <fullName>Batch21</fullName>
                </value>
                <value>
                    <fullName>Batch22</fullName>
                </value>
                <value>
                    <fullName>Batch23</fullName>
                </value>
                <value>
                    <fullName>Batch24</fullName>
                </value>
                <value>
                    <fullName>Batch25</fullName>
                </value>
                <value>
                    <fullName>Batch26</fullName>
                </value>
                <value>
                    <fullName>Batch27</fullName>
                </value>
                <value>
                    <fullName>Batch28</fullName>
                </value>
                <value>
                    <fullName>Batch29</fullName>
                </value>
                <value>
                    <fullName>Batch30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillingCycleDay__c</fullName>
        <description>(Deprecated)</description>
        <formula>TEXT(DAY( zqu__StartDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Deprecated)</inlineHelpText>
        <label>(Deprecated)BillingCycleDay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__BillingMethod__c</fullName>
        <description>The Billing Method of the Quote.</description>
        <inlineHelpText>The Billing Method of the Quote.</inlineHelpText>
        <label>Invoice Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Calculate_Quote_Metrics_Through__c</fullName>
        <description>Select how you would like Quote Metrics values to be calculated</description>
        <inlineHelpText>Select how you would like Quote Metrics values to be calculated.If you select the End of Term option, Evergreen Subscription metrics will be calculated for 1 billing period.</inlineHelpText>
        <label>Calculate Quote Metrics Through</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__CancellationDate__c</fullName>
        <description>Date on which the cancellation is made.</description>
        <inlineHelpText>Date on which the cancellation is made.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__CancellationEffectiveDate__c</fullName>
        <label>Cancellation Effective Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter a Date</fullName>
                    <default>true</default>
                    <label>Enter a Date</label>
                </value>
                <value>
                    <fullName>End of Current Term</fullName>
                </value>
                <value>
                    <fullName>End of Last Invoice Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__CommunicationProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication Profile</label>
        <referenceTo>zqu__CommunicationProfile__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <description>The Currency the Quote is in.</description>
        <inlineHelpText>The Currency the Quote is in.</inlineHelpText>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Customer_Acceptance_Date__c</fullName>
        <inlineHelpText>Customer Acceptance Date should be on or after Service Activation Date.
If Customer Acceptance Date is not required in Zuora, the Service Activation Date will be used as the Customer Acceptance Date.</inlineHelpText>
        <label>Customer Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <description>Changed MRR for this quote</description>
        <inlineHelpText>Changed MRR for this quote</inlineHelpText>
        <label>DeltaMRR (Deprecated)</label>
        <summarizedField>zqu__QuoteAmendment__c.zqu__DeltaMRR__c</summarizedField>
        <summaryForeignKey>zqu__QuoteAmendment__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <description>Changed TCV for this quote</description>
        <inlineHelpText>Changed TCV for this quote</inlineHelpText>
        <label>DeltaTCV (Deprecated)</label>
        <summarizedField>zqu__QuoteAmendment__c.zqu__DeltaTCV__c</summarizedField>
        <summaryForeignKey>zqu__QuoteAmendment__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>A description of the amendment.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__ElectronicPaymentMethodId__c</fullName>
        <description>This is the Zuora payment method id created by the HPM.</description>
        <inlineHelpText>This is the Zuora payment method id created by the HPM.</inlineHelpText>
        <label>Electronic Payment Method Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ExistSubscriptionID__c</fullName>
        <label>Exist Subscription ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__GenerateInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to control whether the invoice will be generated with current quote when the quote is sent to Z-Billing.</description>
        <inlineHelpText>The flag to control whether the invoice will be generated with current quote when the quote is sent to Z-Billing</inlineHelpText>
        <label>Generate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Hidden_Subscription_Name__c</fullName>
        <label>Hidden Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InitialTerm__c</fullName>
        <description>The Initial Term of the Quote.</description>
        <inlineHelpText>The Initial Term of the Quote.</inlineHelpText>
        <label>Initial Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceID__c</fullName>
        <description>The system-generated Zuora invoice ID associated with the subscription that is just created by the current quote.</description>
        <inlineHelpText>The system-generated Zuora invoice ID associated with the subscription that is just created by the current quote.</inlineHelpText>
        <label>Invoice ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceOwnerId__c</fullName>
        <description>Invoice Owner Id comes from Z360 Package Billing Account&apos;</description>
        <label>Invoice Owner Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceOwnerName__c</fullName>
        <label>Invoice Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceProcessingOption__c</fullName>
        <description>The option to determine which level the invoice will be generated when the quote is sent to Z-Billing.</description>
        <inlineHelpText>The option to determine which level the invoice will be generated when the quote is sent to Z-Billing.</inlineHelpText>
        <label>Invoice Processing Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                    <default>true</default>
                    <label>Subscription</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__InvoiceSeparately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the subscription is invoiced separately. If TRUE, then all charges for this subscription are collected into the subscription&apos;s own invoice.</description>
        <inlineHelpText>Determines if the subscription is invoiced separately. If TRUE, then all charges for this subscription are collected into the subscription&apos;s own invoice.</inlineHelpText>
        <label>Invoice Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceTargetDate__c</fullName>
        <label>Invoice Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Template</label>
        <referenceTo>zqu__InvoiceTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Charge_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to indicate whether the Quote Metrics need to be recalculated.</description>
        <inlineHelpText>The flag to indicate whether the Quote Metrics need to be recalculated.</inlineHelpText>
        <label>Is Charge Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Parent_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked upon creation of the quote record if the quote is the Parent of one or more Sub Quotes.</description>
        <inlineHelpText>This box will be checked upon creation of the quote record if the quote is the Parent of one or more Sub Quotes.</inlineHelpText>
        <label>Is Parent Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <label>MRR (Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__MRRForRollup__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__Number__c</fullName>
        <description>The Quote Number.</description>
        <displayFormat>Q{000000}</displayFormat>
        <inlineHelpText>The Quote Number.</inlineHelpText>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>zqu__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity associated with this Quote.</description>
        <inlineHelpText>The Opportunity associated with this Quote.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ParentQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field for the Sub-Quote to look up for it&apos;s parent Quote,  the Primary Quote.</description>
        <inlineHelpText>This is a lookup field for the Sub-Quote to look up for it&apos;s parent Quote,  the Primary Quote.</inlineHelpText>
        <label>Parent Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>SubQuotes</relationshipLabel>
        <relationshipName>SubQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__PaymentGateway__c</fullName>
        <description>This field is used to set the Gateway on New Billing Accounts in Zuora for New Subscription Quotes only.</description>
        <inlineHelpText>This field is used to set the Gateway on New Billing Accounts in Zuora for New Subscription Quotes only. Values in this picklist must correspond to values in Zuora.</inlineHelpText>
        <label>Payment Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Default Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PaymentMethod__c</fullName>
        <description>The Payment Method for the Quote.</description>
        <inlineHelpText>The Payment Method for the Quote.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PaymentTerm__c</fullName>
        <description>The Payment Term.</description>
        <inlineHelpText>The Payment Term.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Delta_MRR__c</fullName>
        <description>Delta MRR which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Delta MRR which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Delta_TCV__c</fullName>
        <description>Delta TCV which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Delta TCV which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Delta TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Discount__c</fullName>
        <description>Discount which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Discount which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_MRR__c</fullName>
        <description>MRR value which is got by previewing the quote from Zuora</description>
        <inlineHelpText>MRR value which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_SubTotal__c</fullName>
        <description>Sub-total which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Sub-total which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_TCV__c</fullName>
        <description>TCV value which is got by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Tax__c</fullName>
        <description>Tax which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Tax which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Total__c</fullName>
        <description>Total which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Total which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ProcessPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to control whether the payment will be processed with current quote when the quote is sent to Z-Billing.</description>
        <inlineHelpText>The flag to control whether the payment will be processed with current quote when the quote is sent to Z-Billing.</inlineHelpText>
        <label>Process Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ProductSelectorVersion__c</fullName>
        <formula>TEXT(zqu__ZuoraConfig__r.zqu__ProductSelectorVersion__c)</formula>
        <label>ProductSelector Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote template that is used to generate the Quote PDF or Word document.</description>
        <inlineHelpText>The Quote template that will be used to generate the Quote PDF or Word document.  If not selected, the user will select a quote template from a list of available quote templates when creating Quote PDF or Word document.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>zqu__Quote_Template__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RecordReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is allowed to edit the Quote record according to Zuora Config</description>
        <inlineHelpText>If it is allowed to edit the Quote record according to Zuora Config</inlineHelpText>
        <label>RecordReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalSetting__c</fullName>
        <description>Specifies whether a termed subscription will remain termed or change to evergreen when it is renewed.</description>
        <inlineHelpText>Specifies whether a termed subscription will remain termed or change to evergreen when it is renewed.</inlineHelpText>
        <label>Renewal Setting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalTerm__c</fullName>
        <description>The Renewal Term of the Quote.</description>
        <inlineHelpText>The Renewal Term of the Quote.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Service_Activation_Date__c</fullName>
        <inlineHelpText>Service Activation Date should be on or after Start Date and cannot be after Customer Acceptance Date.
If Service Activation Date is not required in Zuora, the Start Date will be used as the Service Activation Date.</inlineHelpText>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SoldToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is sold to for this Quote.</description>
        <inlineHelpText>The Contact that is sold to for this Quote.</inlineHelpText>
        <label>Sold to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Ship to Contact)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__StartDate__c</fullName>
        <description>The Date that the Quote Starts.</description>
        <inlineHelpText>The Date that the Quote Starts.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <description>The Status of the Quote.</description>
        <inlineHelpText>The Status of the Quote.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent to Z-Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionName__c</fullName>
        <description>The name of the subscription.</description>
        <label>Subscription Name (Deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionTermEndDate__c</fullName>
        <description>The term end date of the subscription is amendment on, only used for amendment Quote</description>
        <inlineHelpText>The term end date of the subscription is amendment on</inlineHelpText>
        <label>Subscription Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionTermStartDate__c</fullName>
        <description>The term start date of the subscription is amendment on, only used for amendment Quote</description>
        <inlineHelpText>The term start date of the subscription is amendment on</inlineHelpText>
        <label>Subscription Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionType__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>Amend Subscription</fullName>
                </value>
                <value>
                    <fullName>Renew Subscription</fullName>
                </value>
                <value>
                    <fullName>Cancel Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionVersion__c</fullName>
        <description>This is the version of the subscription</description>
        <label>Subscription Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Subscription_Name__c</fullName>
        <formula>IF( zqu__Hidden_Subscription_Name__c != &apos;&apos;,  zqu__Hidden_Subscription_Name__c ,  zqu__SubscriptionName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Subscription_Term_Type__c</fullName>
        <inlineHelpText>Subscription Term Type determines whether its Termed or Evergreen. If Evergreen is chosen, then Initial Term and Renewal Term will be set to 0 and Auto Renew will be unchecked. Also, blank value means Quote is created with Termed Subscription Type.</inlineHelpText>
        <label>Subscription Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <label>TCV (Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__TCVForRollup__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__Tax__c</fullName>
        <description>The amount of Tax for the Quote.</description>
        <inlineHelpText>The amount of Tax for the Quote.</inlineHelpText>
        <label>Tax(Deprecated)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>